parslers-benchmark/src/tests/invalid/syntaxErr/pairs/badLookup01.wacc
# try to directly print pair's first element

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
	pair(int, char) p = newpair(10, 'a') ;
  println fst p
end
